ASC Prod BAckup/ASC Prod/force-app/main/default/objects/ContactPointAddress/fields/billing_shipping_address_id__c.field-meta.xml
<CustomField>
    <fullName>billing_shipping_address_id__c</fullName>
    <externalId>true</externalId>
    <label>billing_shipping_address_id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>