ASC Prod BAckup/ASC Prod/force-app/main/default/objects/ContactPointAddress/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>